[2025.12.29] source refactor